bug scrollbar

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -952,6 +952,8 @@ body::before {
     padding: 24px;
     position: relative;
     z-index: 1;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 /* Welcome Message */
